Render tasks from js

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <button type="submit" class="add-button">Add</button>
       </form>
       <ul class="todo-items">
-        <li class="item" data-key="1594003133171">
+        <!-- <li class="item" data-key="1594003133171">
           <input class="checkbox" type="checkbox">
             Study JS
           <button class="delete-button">X</button>
@@ -32,7 +32,7 @@
           <input class="checkbox" type="checkbox">
             Watch football
           <button class="delete-button">X</button>
-        </li>
+        </li> -->
       </ul>
     </div>
   </body>
