Add js functions for adding and removing tasks

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,21 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1>To Do list</h1>
-      <form class="todo-form">
-        <input type="text" class="todo-input" placeholder="Add to your list..." />
-        <button type="submit" class="add-button">Add</button>
-      </form>
-      <ul class="todo-items">
+    <header>
+      <h1>My Todo List</h1>
+  </header>
+
+  <form>
+      <input type="text" class="todo-input" placeholder="New Task here">
+      <button class="add-todo-button">
+          <i class="fas fa-plus-square"></i>
+      </button>
+  </form>
+
+  <div class="todo-container">
+      <ul class="todo-list">
+          
       </ul>
-    </div>
+  </div>
   </body>
 </html>
